--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ html {
     margin-bottom: 60px; /* Margin bottom by footer height */
     background-image: url("../images/concrete_seamless.png");
     font-family: Arial,'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
   }
   .footer {
     position: absolute;
@@ -22,20 +23,59 @@ html {
   img.rounded.float-left{
       margin-right: 15px;
   }
-  /* .container{
-    background-color: #ffffff;
-    /* width: 50%;
-    padding: 10%;
-    margin-top: 0;
-    } */
-    
-  h3 {
-      background-color: #ffffff;
-      margin-top: 25px;
-      margin-bottom: 0px;
-      width: 50%;
-      text-align: center;
-      font-family: 'Georgia', Times, 'Times New Roman', serif;
-      border-bottom: #dddddd;
-      border-bottom-style: solid;
+
+  #toprow{
+    height: 50px;
   }
+  #aboutme{
+    background: #ffffff;
+  }
+  .card{
+    border: none;
+  }
+  .card-header:first-child{
+    border-bottom: #dddddd solid 2px;
+  }
+  .card-header{
+    background: #ffffff;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    color: #4aaaa5;
+    font-size: 1.35rem;
+    font-weight: bold;
+  }
+  .sociallinks{
+    padding: 5px;
+  }
+  img.rounded.float-left {
+    margin-right: 15px;
+    margin-top: 15px;}
+  .navbar-light .navbar-brand {
+      color: #ffffff;
+      background: #4aaaa5;
+      font-family: 'Georgia', Times, 'Times New Roman', serif;
+      font-weight: bold;
+      font-size: 2rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
+  }
+  .navbar{
+    padding-bottom: 0rem;
+    padding-top: 0rem;
+    padding-left: 12rem;
+    color: #777777;
+  }
+  .nav-link{
+    color: #777777;
+  }
+
+h2{
+  font-family: 'Georgia', Times, 'Times New Roman', serif;
+  color: #4aaaa5;
+  margin-top: 0.5rem;
+  border-bottom: #dddddd solid 2px;
+  font-weight: bold;
+  padding-bottom: 0.5rem;
+}
+.justify-content-end{
+  padding-right: 12rem;
+}
