--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ html {
   }
   .footer {
     position: absolute;
-    bottom: 0;
+    bottom: -50px;
     width: 100%;
     height: 80px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
@@ -20,14 +20,11 @@ html {
     border-top-style: solid;
     border-width: 5px;
   }
-  img.rounded.float-left{
-      margin-right: 15px;
-  }
 
   #toprow{
     height: 50px;
   }
-  #aboutme{
+  .main-column{
     background: #ffffff;
   }
   .card{
@@ -48,7 +45,7 @@ html {
   }
   img.rounded.float-left {
     margin-right: 15px;
-    margin-top: 15px;}
+    margin-top: 5px;}
   .navbar-light .navbar-brand {
       color: #ffffff;
       background: #4aaaa5;
@@ -76,6 +73,50 @@ h2{
   font-weight: bold;
   padding-bottom: 0.5rem;
 }
+h3 {
+  color: #ffffff;
+  background: #4aaaa5;
+  font-size: 1.5rem;
+  text-align: center;
+  /* margin: 15px; */
+  padding: 0.5rem;
+  font-family: 'Georgia', Times, 'Times New Roman', serif;
+}
 .justify-content-end{
   padding-right: 12rem;
+}
+.form-row{
+  padding-bottom: 1rem;
+  margin-left: 0rem;
+}
+#inputMessage{
+  height: 15rem;
+}
+.form-control::placeholder{
+  color: #777777;
+  opacity: 0.5;
+}
+.btn-primary{
+  background-color: #4aaaa5;
+  border-color: #4aaaa5;
+}
+.card-img-overlay{
+  padding: 0rem;
+  top: 200px;
+}
+.card-img{
+  height: 267px;
+}
+.portfoliorows{
+  padding: 2rem;
+}
+@media screen and (max-width: 768px){
+  .navbar{padding-left: 0rem;}
+  .justify-content-end{padding-right: 0rem;}
+  .col-sm-4{padding-top: 1rem;}
+  .card-img{height: 100px;}
+  .card-img-overlay{top: 60px;}
+  .card-header{padding: 0.25rem;}
+  .card-body{padding: 0.75rem 0.25rem}
+  h3{font-size: 0.75rem;}
 }
