--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,13 +110,16 @@ h3 {
 .portfoliorows{
   padding: 2rem;
 }
-@media screen and (max-width: 768px){
-  .navbar{padding-left: 0rem;}
+@media screen and (max-width: 980px){
+  .navbar{padding-left: 0rem; padding-right: 0%;}
+  .navbar-brand{width:100%;margin-right: 0rem;}
   .justify-content-end{padding-right: 0rem;}
-  .col-sm-4{padding-top: 1rem;}
+  .col-md-4{padding-top: 1rem;}
   .card-img{height: 100px;}
   .card-img-overlay{top: 60px;}
   .card-header{padding: 0.25rem;}
   .card-body{padding: 0.75rem 0.25rem}
   h3{font-size: 0.75rem;}
 }
+@media screen and (max-width: 768px){
+  .col-md-4{padding: 1rem 0rem;}
